lab09/grade.txt
******************* PART 1 Compress Test*********************
*************COMPILATION ERROR*******************
tests/csu/csci325/CompressTest.java:28: error: non-static method compress(String) cannot be referenced from a static context
        String result = Compress.compress(s);
                                ^
tests/csu/csci325/CompressTest.java:38: error: non-static method compress(String) cannot be referenced from a static context
        String result = Compress.compress(s);
                                ^
tests/csu/csci325/CompressTest.java:48: error: non-static method compress(String) cannot be referenced from a static context
        String result = Compress.compress(s);
                                ^
tests/csu/csci325/CompressTest.java:57: error: non-static method compress(String) cannot be referenced from a static context
        String result = Compress.compress(s);
                                ^
4 errors
Compilation errors, please fix...
******************* PART 2 Convert Expression Test*********************
JUnit version 4.12
.isOperator2: -
.isOperator3: *
.isOperator4: /
.isOperator5: x
.isOperator6: empty string
.isOperator: +
.postToInfix2: ab*c+
.postToInfix3: abc-*de+/5*
.postToInfix4: **abc
Malformed Input
.postToInfix: abc++
.preToInfix2:  *-A/BC-/AKL
.preToInfix3:  /*AB*+-CD-EF2
.preToInfix4:  *+/*AB*+CD-EF2
Malformed Input
.preToInfix:  *+AB-CD

Time: 0.012

OK (14 tests)

+ 33.333 pts of 33.333
Total grade so far: 33.333
******************* PART 3 Palindrome Test*********************
JUnit version 4.12
.checkPal: eye
.checkPal2: noon
.checkPal3: Mom
.checkPal4: A Santa at NASA!
.checkPal5: A man, a plan, a cat, a ham, a yak, a yam, a hat, a canal-Panama!
.checkPal6: Anna Banana
.checkPal7: This is not a palindrome.

Time: 0.01

OK (7 tests)

+ 33.333 pts of 33.333
Total grade so far: 66.666
